correccion de errores
